--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
   <section id="api" class="api-section animate-on-scroll">
     <h2 class="section-title">Saturn API</h2>
     <p class="api-description">Saturn Api is free and open source based on Xeno!</p>
-    <a href="https://github.com/Billysys/Saturn_Api" class="github-btn" target="_blank">
+    <a href="https://github.com/Delforello/Saturn_Api" class="github-btn" target="_blank">
       <i class="fab fa-github"></i> View on GitHub
     </a>
   </section>
@@ -411,7 +411,7 @@
         <h3>Discord server</h3>
         <p>Join our community</p>
       </a>
-      <a href="https://github.com/Billysys/Saturn-X" class="contact-card animate-on-scroll" target="_blank">
+      <a href="https://github.com/Delforello/Saturn-X" class="contact-card animate-on-scroll" target="_blank">
         <i class="fab fa-github"></i>
         <h3>GitHub Repository</h3>
         <p>Saturn X on github</p>
