--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="Icon" href="Icon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
+    html {
+    scroll-behavior: smooth;
+    }
     * {
       margin: 0;
       padding: 0;
