--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
   </section>
 
   <section id="contacts" class="contacts">
-    <h2 class="section-title">Contatti</h2>
+    <h2 class="section-title">Contacts</h2>
     <div class="contact-cards">
       <a href="https://discord.gg/RrNWfpjtHA" class="contact-card animate-on-scroll" target="_blank">
         <i class="fab fa-discord"></i>
