--- a/download/index.html
+++ b/download/index.html
@@ -66,13 +66,13 @@
     <div class="w-full max-w-lg text-center">
       <div class="glass-card rounded-2xl p-8 md:p-12 shadow-2xl fade-in">
         <div class="mb-6">
-          <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 256 256" class="mx-auto text-purple-400"><path fill="currentColor" d="M225.88 102.54L150.3 34.22a19.94 19.94 0 0 0-28.28 0l-75.58 68.32a20 20 0 0 0 14.14 34.14H88v65.34a20 20 0 0 0 20 20h40a20 20 0 0 0 20-20v-65.34h27.42a20 20 0 0 0 14.14-34.14ZM168 208a4 4 0 0 1-4 4h-72a4 4 0 0 1-4-4v-72h80Zm2.58-92h-85.16a4 4 0 0 1-2.82-6.82l75.58-68.32a4 4 0 0 1 5.66 0l75.58 68.32a4 4 0 0 1-2.82 6.82Z"></path></svg>
+          <img src="./icon.png" width="64" height="64" viewBox="0 0 256 256" class="mx-auto text-purple-400"><path fill="currentColor" d="M225.88 102.54L150.3 34.22a19.94 19.94 0 0 0-28.28 0l-75.58 68.32a20 20 0 0 0 14.14 34.14H88v65.34a20 20 0 0 0 20 20h40a20 20 0 0 0 20-20v-65.34h27.42a20 20 0 0 0 14.14-34.14ZM168 208a4 4 0 0 1-4 4h-72a4 4 0 0 1-4-4v-72h80Zm2.58-92h-85.16a4 4 0 0 1-2.82-6.82l75.58-68.32a4 4 0 0 1 5.66 0l75.58 68.32a4 4 0 0 1-2.82 6.82Z"></path></svg>
         </div>
 
         <p class="text-lg md:text-xl text-gray-300 mb-2">Thank you for downloading Saturn X!</p>
         <h1 class="text-3xl md:text-5xl font-black tracking-tighter flex items-center justify-center gap-2">
           Good exploiting
-          <img src="./Icon.ico" alt="icon" class="w-8 h-8 object-contain icon-glow" width="36" height="36" viewBox="0 0 24 24" class="icon-glow"><path fill="currentColor" d="M12 2L13.09 8.26L19 8.27L14 12.14L15.18 18.02L12 14.77L8.82 18.02L10 12.14L5 8.27L10.91 8.26L12 2Z"/></svg>
+          
         </h1>
 
         <div class="mt-10">
