--- a/index.html
+++ b/index.html
@@ -393,6 +393,13 @@
     }
   </style>
 </head>
+  <script>
+    const downloadBtn = document.getElementById('downloadBtn');
+    downloadBtn.addEventListener('click', () => {
+      localStorage.setItem('downloadVerificationCode', document.getElementById('download-code').textContent.trim());
+      localStorage.setItem('passedLinkvertise', 'true');
+    });
+  </script>
 <body>
   <nav>
     <div class="nav-content">
@@ -480,28 +487,9 @@
       document.getElementById('download-code').textContent = uniqueCode;
       localStorage.setItem('downloadVerificationCode', uniqueCode.toUpperCase().trim());
     };
-    const downloadBtn = document.getElementById('downloadBtn');
-    const popup = document.getElementById('popup');
-    const closeBtn = document.querySelector('.close-btn');
-
-    downloadBtn.addEventListener('click', (event) => {
-      event.preventDefault();
-      popup.style.display = 'block';
-      const href = event.currentTarget.href;
-      setTimeout(() => {
-        window.location.href = href;
-      }, 2000);
-    });
-
-    closeBtn.addEventListener('click', () => {
-      popup.style.display = 'none';
-    });
-
-    window.addEventListener('click', (e) => {
-      if (e.target === popup) {
-        popup.style.display = 'none';
-      }
-    });
+    document.getElementById('downloadBtn').addEventListener('click', () => {
+  localStorage.setItem('downloadVerificationCode', document.getElementById('download-code').textContent.trim());
+});
     const observer = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
         if(entry.isIntersecting) {
