--- a/download/index.html
+++ b/download/index.html
@@ -55,7 +55,7 @@
   <!-- PASSWORD GATE -->
   <div id="password-gate" class="min-h-screen flex items-center justify-center p-4">
     <div class="w-full max-w-md text-center glass-card rounded-2xl p-8 shadow-2xl">
-      <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" class="mx-auto text-purple-400 mb-4"><path fill="currentColor" d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12c5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"/></svg>
+      <img src="./Icon.ico" width="48" height="48" viewBox="0 0 24 24" class="mx-auto text-purple-400 mb-4"><path fill="currentColor" d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12c5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"/></svg>
       <h1 class="text-2xl font-bold mb-2">Verification Required</h1>
       <p class="text-gray-400 mb-6">Enter the code you received on the main page to unlock the download.</p>
 
