--- a/download/index.html
+++ b/download/index.html
@@ -81,12 +81,11 @@
         </h1>
 
         <div class="mt-10">
-          <a href="./Saturn X.zip" download class="btn-shine inline-block bg-purple-600 hover:bg-purple-700 text-white font-bold text-lg py-4 px-10 rounded-full shadow-lg shadow-purple-500/20">
+          <a href="./downloads/Saturn X.zip" download class="btn-shine inline-block bg-purple-600 hover:bg-purple-700 text-white font-bold text-lg py-4 px-10 rounded-full shadow-lg shadow-purple-500/20">
             Download Now
           </a>
         </div>
       </div>
-      <p class="text-xs text-gray-600 mt-8 fade-in">Your download will start automatically.</p>
     </div>
   </div>
 
